--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
