--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "enzyme": "^3.11.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
@@ -19,6 +21,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
+    "sinon": "^11.1.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme-adapter-react-16": "^1.15.6"
   }
 }
